--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^10.0.0",
+    "react-range-slider-input": "^3.3.2",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.1",
     "tabler-icons-react": "^1.56.0",
