made sure you can search easier to weird names

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "mailersend": "^2.6.0",
     "next": "15.5.2",
     "openai": "^6.8.0",
+    "puppeteer": "^24.31.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "19.2.0",
     "react-currency-input-field": "^4.0.3",
     "react-dom": "19.2.0",
