--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "dev": "next dev --turbopack --port 3210",
     "dev:staging": "dotenv -e .env.staging -- next dev --turbopack --port 3210",
+    "dev:emulator": "dotenv -e .env.emulator -- next dev --turbopack --port 3210",
     "prod": "next dev --turbopack --port 3210",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "echo 'skipping eslint: eslint'"
+    "lint": "echo 'skipping eslint: eslint'",
+    "emulators": "export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && firebase emulators:start --import=./emulator-data --export-on-exit",
+    "emulators:clear": "rm -rf ./emulator-data && export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && firebase emulators:start --export-on-exit=./emulator-data",
+    "emulators:seed": "export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && node scripts/seed-emulator.js"
   },
   "dependencies": {
     "@ariakit/react": "^0.4.20",
