--- a/firebase.json
+++ b/firebase.json
@@ -33,5 +33,21 @@
   ],
   "extensions": {
     "mailersend-email": "mailersend/mailersend-email@0.1.8"
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099,
+      "host": "127.0.0.1"
+    },
+    "firestore": {
+      "port": 8080,
+      "host": "127.0.0.1"
+    },
+    "ui": {
+      "enabled": true,
+      "port": 4000,
+      "host": "127.0.0.1"
+    },
+    "singleProjectMode": true
   }
 }
