improved rider name formatting to keep particles like 'van', 'de', 'der' lowercase and added service-account-key.json to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ next-env.d.ts
 # Firebase service account credentials
 *firebase-adminsdk*.json
 serviceAccountKey.json
+service-account-key.json
 
 # Firebase Emulator data
 emulator-data/
