--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "19.2.1",
     "react-currency-input-field": "^4.0.3",
+    "react-datepicker": "^8.10.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
