--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/react": "^3.11.1",
     "@tiptap/starter-kit": "^3.11.1",
     "@uidotdev/usehooks": "^2.4.1",
+    "@vercel/speed-insights": "^1.3.1",
     "ai": "^5.0.87",
     "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
