--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "firestore": "^1.1.6",
     "flag-icons": "^7.5.0",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.7.2",
+    "i18next-icu": "^2.4.1",
     "mailersend": "^2.6.0",
     "next": "15.5.7",
     "openai": "^6.8.0",
@@ -46,6 +48,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.4.1",
     "react-intersection-observer": "^10.0.0",
     "react-range-slider-input": "^3.3.2",
     "react-virtualized-auto-sizer": "^1.0.26",
