added GitHub Actions workflow for Playwright E2E tests with Firebase emulator integration, migrated from Cypress to Playwright due to macOS 15.6.1 compatibility issues, added playwright-report and test-results directories to gitignore, and created documentation explaining Cypress macOS compatibility problems with verified working test infrastructure and migration recommendations

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ emulator-data/
 ui-debug.log
 firebase-debug.log
 firestore-debug.log
+firebase-export-*/
+
+# Playwright
+/playwright-report/
+/test-results/
+/playwright/.cache/
