--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
     "lint": "eslint . --ext .ts,.tsx --quiet",
     "emulators": "export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && firebase emulators:start --import=./emulator-data --export-on-exit",
     "emulators:clear": "rm -rf ./emulator-data && export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && firebase emulators:start --export-on-exit=./emulator-data",
-    "emulators:seed": "export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && node scripts/seed-emulator.js"
+    "emulators:seed": "export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && node scripts/seed-emulator.js",
+    "seed:test-data": "tsx scripts/seed-test-data.ts",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:full": "start-server-and-test emulators http://127.0.0.1:4000 'start-server-and-test dev:emulator http://localhost:3210 scripts/run-tests-with-seed.sh'",
+    "test:e2e:full:ui": "start-server-and-test emulators http://127.0.0.1:4000 'start-server-and-test dev:emulator http://localhost:3210 \"scripts/run-tests-with-seed.sh --ui\"'"
   },
   "dependencies": {
     "@ariakit/react": "^0.4.20",
@@ -59,6 +67,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19.2.7",
@@ -66,7 +75,13 @@
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "istanbul-lib-coverage": "^3.2.2",
+    "nyc": "^17.1.0",
+    "start-server-and-test": "^2.1.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-loader": "^9.5.4",
+    "tsx": "^4.21.0",
+    "typescript": "^5",
+    "wait-on": "^9.0.3"
   }
 }
