--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ariakit/react": "^0.4.20",
     "@floating-ui/dom": "^1.7.4",
     "@motiadev/stream-client-react": "^0.8.4-beta.141",
+    "@tabler/icons-react": "^3.36.0",
     "@tiptap/core": "^3.12.1",
     "@tiptap/extension-link": "^3.11.1",
     "@tiptap/extension-underline": "^3.11.1",
