--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -45,11 +45,12 @@ jobs:
           NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}
           NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
           NEXT_PUBLIC_FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}
+          NEXT_PUBLIC_BASE_URL=http://localhost:3210
           EOF
 
       - name: Start Firebase Emulators in background
         run: |
-          firebase emulators:start --only auth,firestore,functions &
+          firebase emulators:start --only auth,firestore &
           echo "Waiting for emulators to start..."
           npx wait-on http://127.0.0.1:4000 -t 60000
 
@@ -58,9 +59,9 @@ jobs:
 
       - name: Start Next.js server in background
         run: |
-          npm run dev:emulator &
+          npm run dev:emulator > next-dev.log 2>&1 &
           echo "Waiting for Next.js to start..."
-          npx wait-on http://localhost:3210 -t 60000
+          npx wait-on http://localhost:3210 -t 120000 || (echo "Next.js failed to start. Logs:" && cat next-dev.log && exit 1)
         env:
           NODE_ENV: test
 
@@ -91,5 +92,6 @@ jobs:
           name: logs
           path: |
             firebase-debug.log
+            next-dev.log
             *.log
           if-no-files-found: ignore
