--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
       "schedule": "*/15 * * * *"
     },
     {
+      "path": "/api/cron/send-budget-reminders",
+      "schedule": "*/30 * * * *"
+    },
+    {
       "path": "/api/cron/send-birthday-notifications",
       "schedule": "0 12 * * *"
     },
