--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@ariakit/react": "^0.4.20",
     "@floating-ui/dom": "^1.7.4",
+    "@sparticuz/chromium": "^143.0.0",
     "@tabler/icons-react": "^3.36.0",
     "@tiptap/core": "^3.12.1",
     "@tiptap/extension-link": "^3.11.1",
@@ -47,6 +48,7 @@
     "next": "15.5.9",
     "openai": "^6.8.0",
     "puppeteer": "^24.31.0",
+    "puppeteer-core": "^24.34.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "19.2.1",
