--- a/vercel.json
+++ b/vercel.json
@@ -24,5 +24,10 @@
       "path": "/api/cron/cleanup-expired-jobs",
       "schedule": "0 2 * * *"
     }
-  ]
+  ],
+  "functions": {
+    "app/api/**/*.ts": {
+      "includeFiles": ["node_modules/@sparticuz/chromium/**"]
+    }
+  }
 }
