--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
   ],
   "functions": {
     "app/api/**/*.ts": {
-      "includeFiles": ["node_modules/@sparticuz/chromium/**"]
+      "includeFiles": "node_modules/@sparticuz/chromium/**"
     }
   }
 }
