--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,8 @@
   ],
   "functions": {
     "app/api/**/*.ts": {
-      "maxDuration": 60
+      "maxDuration": 60,
+      "memory": 3008
     }
   }
 }
