--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emulators:clear": "rm -rf ./emulator-data && export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && firebase emulators:start --export-on-exit=./emulator-data",
     "emulators:seed": "export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && node scripts/seed-emulator.js",
     "seed:test-data": "tsx scripts/seed-test-data.ts",
+    "remove-user-from-game": "tsx scripts/remove-user-from-game.ts",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
@@ -24,6 +25,9 @@
   },
   "dependencies": {
     "@ariakit/react": "^0.4.20",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/dom": "^1.7.4",
     "@sparticuz/chromium": "^143.0.0",
     "@sparticuz/chromium-min": "^143.0.0",
