feat: add new year rankings creation without points and team scraping functionality
- Add createRankingNew API route to create 2026 rankings without points field
- Add withoutPoints parameter to createRanking route to conditionally exclude points
- Add getNewTeams scraper to fetch and save team data from ProcyclingStats
- Add getRidersRankedPuppeteerNewYear scraper for new year rankings without points
- Add testNewTeams API route for testing team scraping
- Update createRanking page with create

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ firebase-export-*/
 /playwright-report/
 /test-results/
 /playwright/.cache/
+backups/rankings_2026_backup_2026-01-01T13-33-29-943Z.json
