feat: add HTTP caching to rankings API and improve Playwright test reliability
- Add Cache-Control headers to getRankings route with 1-hour cache and stale-while-revalidate
- Import emulator data in Firebase emulators startup for consistent test state
- Update login tests to wait for /home URL instead of checking absence of /login
- Increase login navigation timeout from 10s to 15s for more reliable CI runs
- Update login error message assertion to match actual "Invalid email or password" text
- Change

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Start Firebase Emulators in background
         run: |
-          firebase emulators:start --only auth,firestore &
+          firebase emulators:start --only auth,firestore --import=./emulator-data &
           echo "Waiting for emulators to start..."
           npx wait-on http://127.0.0.1:4000 -t 60000
 
