--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/speed-insights": "^1.3.1",
     "ai": "^5.0.87",
+    "blueimp-md5": "^2.19.0",
     "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
     "firebase": "^12.5.0",
@@ -77,6 +78,7 @@
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
+    "@types/blueimp-md5": "^2.18.2",
     "@types/node": "^20",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
