--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@sparticuz/chromium": "^143.0.0",
     "@sparticuz/chromium-min": "^143.0.0",
     "@tabler/icons-react": "^3.36.0",
+    "@tanstack/react-table": "^8.21.3",
     "@tiptap/core": "^3.12.1",
     "@tiptap/extension-link": "^3.11.1",
     "@tiptap/extension-underline": "^3.11.1",
