feat: add admin race management dashboard with points override and scraper data fix capabilities
- Add /admin/races page with RaceManagementDashboard component and admin authentication
- Add /api/admin/override-points endpoint to add, subtract, or set rider points with audit trail and email notifications
- Add /api/admin/fix-scraper-data endpoint to update specific fields in scraper-data documents
- Add override reversal capability with DELETE method to undo points adjustments
- Add override history tracking

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "firestore": "^1.1.6",
     "flag-icons": "^7.5.0",
     "framer-motion": "^12.23.24",
+    "fuse.js": "^7.1.0",
     "i18next": "^25.7.2",
     "i18next-icu": "^2.4.1",
     "next": "15.5.9",
