--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-i18next": "^16.4.1",
     "react-intersection-observer": "^10.0.0",
     "react-range-slider-input": "^3.3.2",
+    "react-tooltip": "^5.30.0",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.1",
     "resend": "^6.6.0",
