--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,12 @@
       "location": "eur3",
       "rules": "firestore-football.rules",
       "indexes": "firestore.indexes.json"
+    },
+    {
+      "database": "oracle-games-f1",
+      "location": "eur3",
+      "rules": "firestore-f1.rules",
+      "indexes": "firestore.indexes.json"
     }
   ],
   "functions": [
