--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -54,6 +54,22 @@ jobs:
           echo "Waiting for emulators to start..."
           npx wait-on http://127.0.0.1:4000 -t 60000
 
+      - name: Sanity check Auth Emulator login
+        run: |
+          echo "Checking login for user@test.com against Auth Emulator..."
+          API_KEY="${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}"
+          if [ -z "$API_KEY" ]; then
+            echo "Missing secret NEXT_PUBLIC_FIREBASE_API_KEY"
+            exit 1
+          fi
+          RESPONSE=$(curl -sS -X POST \
+            "http://127.0.0.1:9099/identitytoolkit.googleapis.com/v1/accounts:signInWithPassword?key=${API_KEY}" \
+            -H "Content-Type: application/json" \
+            -d '{"email":"user@test.com","password":"user123","returnSecureToken":true}')
+
+          echo "$RESPONSE" | grep -q '"idToken"' || (echo "Auth Emulator sanity check failed: $RESPONSE" && exit 1)
+          echo "Auth Emulator sanity check passed."
+
       - name: Seed test data
         run: npm run seed:test-data
 
