--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev --turbopack --port 3210",
     "dev:staging": "dotenv -e .env.staging -- next dev --turbopack --port 3210",
     "dev:emulator": "dotenv -e .env.emulator -- next dev --turbopack --port 3210",
+    "dev:emulator:test": "dotenv -e .env.emulator -- next dev --turbopack --port 3310",
     "prod": "next dev --turbopack --port 3210",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx --quiet",
     "tsx": "tsx",
-    "emulators": "export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && firebase emulators:start --import=./emulator-data --export-on-exit",
-    "emulators:clear": "rm -rf ./emulator-data && export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && firebase emulators:start --export-on-exit=./emulator-data",
-    "emulators:seed": "export PATH=\"/opt/homebrew/opt/openjdk@17/bin:$PATH\" && node scripts/seed-emulator.js",
+    "emulators": "export PATH=\"/opt/homebrew/opt/openjdk@21/bin:$PATH\" && firebase emulators:start --import=./emulator-data --export-on-exit",
+    "emulators:test": "export PATH=\"/opt/homebrew/opt/openjdk@21/bin:$PATH\" && firebase emulators:start --only auth,firestore --import=./emulator-data",
+    "emulators:clear": "rm -rf ./emulator-data && export PATH=\"/opt/homebrew/opt/openjdk@21/bin:$PATH\" && firebase emulators:start --export-on-exit=./emulator-data",
+    "emulators:seed": "export PATH=\"/opt/homebrew/opt/openjdk@21/bin:$PATH\" && node scripts/seed-emulator.js",
     "seed:test-data": "tsx scripts/seed-test-data.ts",
     "remove-user-from-game": "tsx scripts/remove-user-from-game.ts",
     "test:e2e": "playwright test",
@@ -21,8 +23,9 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:report": "playwright show-report",
-    "test:e2e:full": "start-server-and-test emulators http://127.0.0.1:4000 'start-server-and-test dev:emulator http://localhost:3210 scripts/run-tests-with-seed.sh'",
-    "test:e2e:full:ui": "start-server-and-test emulators http://127.0.0.1:4000 'start-server-and-test dev:emulator http://localhost:3210 \"scripts/run-tests-with-seed.sh --ui\"'",
+    "test:e2e:full": "start-server-and-test emulators:test http://127.0.0.1:4000 'start-server-and-test dev:emulator http://localhost:3210 scripts/run-tests-with-seed.sh'",
+    "test:e2e:full:testdb": "start-server-and-test emulators:test http://127.0.0.1:4000 'start-server-and-test dev:emulator:test http://localhost:3310 \"PLAYWRIGHT_BASE_URL=http://localhost:3310 scripts/run-tests-with-seed.sh\"'",
+    "test:e2e:full:ui": "start-server-and-test emulators:test http://127.0.0.1:4000 'start-server-and-test dev:emulator http://localhost:3210 \"scripts/run-tests-with-seed.sh --ui\"'",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
