--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
     {
       "path": "/api/cron/scrape-todays-races",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/process-scrape-jobs",
+      "schedule": "*/5 * * * *"
     }
   ],
   "functions": {
@@ -43,6 +47,14 @@
       "memory": 3008
     },
     "app/api/run-scraper/**/*.ts": {
+      "maxDuration": 300,
+      "memory": 3008
+    },
+    "app/api/cron/scrape-todays-races/**/*.ts": {
+      "maxDuration": 300,
+      "memory": 3008
+    },
+    "app/api/cron/process-scrape-jobs/**/*.ts": {
       "maxDuration": 300,
       "memory": 3008
     },
