--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/dom": "^1.7.4",
+    "@giphy/js-fetch-api": "^5.7.0",
+    "@giphy/react-components": "^10.1.1",
     "@sparticuz/chromium": "^143.0.0",
     "@sparticuz/chromium-min": "^143.0.0",
     "@tabler/icons-react": "^3.36.0",
