--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.1",
     "resend": "^6.6.0",
+    "styled-components": "^6.3.11",
     "tabler-icons-react": "^1.56.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
